Organize the code into modules

--- a/photo_collage.ini
+++ b/photo_collage.ini
@@ -1,22 +1,36 @@
 [tile]
+  ;The dimension of the tile square in pixels
+  ;Property not supported yet, hardcoded
   size=256
+  ;
+  ;Property not supported yet, hardcoded
   dominant_colors=1
+  ;
+  ;Property not supported yet, hardcoded
   label_pointsizes=[20,18,14,6]
+  ;
+  ;Property not supported yet, hardcoded
   prefix_collage="collage-"
+  ;
+  ;Property not supported yet, hardcoded
   prefix_dominant = "dominant-"
 [collage]
+  ;Property not supported yet, hardcoded
   prefix_collage = "all-"
-
+  ;
   ;Which dominant color to sort by, must be <= tile.dominant_colors
-  sorty_by_color=1;
-
+  ;Property not supported yet, hardcoded
+  sorty_by_color=1
+  ;
   ;Prefered orientation of the collage dimensitons, in case
   ;when square of the number of files is not an integer
   ;"horizontal","vertical"
+  ;Property not supported yet, hardcoded
   orientation="horizontal"
-
+  ;
+  ;Property not supported yet, hardcoded
   sort_color_models=["RGB" ,"YIQ" ,"HLS", "HSV"]
-
+  ;
   ;L_LRTB - linear, left to right, top to the bottom
   ;L_RTBT - linear, right to left, bottom to the top
   ;R_CO - radial, from the center towards the outline
@@ -29,7 +43,9 @@
   ;R_OC_2 - radial, 2nd quadrant of R_OC
   ;R_OC_3 - radial, 3rd quadrant of R_OC
   ;R_OC_4 - radial, 4th quadrant of R_OC
-  gradient=["L_LRTB"];the only supported at this moment
+  ;Property not supported yet, hardcoded
+  gradient=["L_LRTB"];the only implemented at this moment
 [collage_jpg]
+  ;Property not supported yet, hardcoded
   quality=90
 [collage_png]
