--- a/photo_collage.ini
+++ b/photo_collage.ini
@@ -7,7 +7,8 @@ size=256
 dominant_colors=1
 ;
 ;Property not supported yet, hardcoded
-label_pointsizes=[20,18,14,6]
+;label_pointsizes=[20,18,14,6]
+label_pointsizes=18
 ;
 ;Property not supported yet, hardcoded
 prefix_collage="collage-"
