Update the ini config file

--- a/photo_collage.ini
+++ b/photo_collage.ini
@@ -1,12 +1,10 @@
 [tile]
 ;The dimension of the tile square in pixels
-;Property not supported yet, hardcoded
 size=256
 ;
-;Property not supported yet, hardcoded
 dominant_colors=1
 ;
-;Property not supported yet, hardcoded
+;Property value as an array not supported yet
 ;label_pointsizes=[20,18,14,6]
 label_pointsizes=18
 ;
